# gpx2prv

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: example.gpx
include/gpx2prv/: gpx.hpp  prv.hpp
src/: gpx.cpp  main.cpp  prv.cpp
tests/: CMakeLists.txt  prv_format.txt  test_gpx.cpp  test_prv.cpp
tests/data/: elevation.gpx  minimal.gpx  multi_segment.gpx  multi_track.gpx  route.gpx  single_point.gpx
